# vauquelin

./: CMakeLists.txt  README  notes.txt
vauquelin/: CMakeLists.txt  resource.h  vauquelin.rc  vauquelin_app.cc  vauquelin_app.h  vauquelin_favicon.cc  vauquelin_favicon.h  vauquelin_handler.cc  vauquelin_handler.h  vauquelin_handler_win.cc  vauquelin_v8.cc  vauquelin_v8.h  vauquelin_win.cc  winicon.h
